# cubebot_sim

./: CMakeLists.txt  README.md  package.xml
config/: cubic_joint_trajectory_controller.yaml
launch/: cub_sim.launch.py  cube_planar.launch.py  cube_prismatic.launch.py
src/: node_control_position.cpp
urdf/: cubic.urdf.xacro  cubic_planar.xacro.urdf  cubic_prismatic_ros2control.xacro.urdf  cubic_simple.xacro.urdf  cubic_with_controller.urdf.xacro  empty_world.world
